# leptos-surreal-session-auth-axum

./: .gitignore  Cargo.toml  README.md
end2end/tests/: example.spec.ts
src/: app.rs  fallback.rs  lib.rs  main.rs  server_fns.rs  user.rs
src/routes/: index.rs  login.rs  logout.rs  mod.rs  signup.rs
src/server/: auth.rs  mod.rs  models.rs  state.rs
